Fix stretching

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -470,10 +470,13 @@ a.product__text {
   z-index: 101;
 }
 
-.product-media-modal__content {
+.product-media-modal__dialog {
   display: flex;
-  flex-direction: column;
-  height: 100vh;
+  align-items: center;
+}
+
+.product-media-modal__content {
+  max-height: 100vh;
   overflow: auto;
   width: 100%;
 }
@@ -511,6 +514,7 @@ a.product__text {
 }
 
 .product-media-modal__content > * {
+  display: block;
   height: auto;
   margin: auto;
 }
